{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 1357,
  "lineage": "e561f1f7-0b9e-f8d9-a97d-99c805eb19a4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:loadbalancer/app/application-loadbalancer/95df2677c425efd7",
            "arn_suffix": "app/application-loadbalancer/95df2677c425efd7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-loadbalancer-760690418.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492286525:loadbalancer/app/application-loadbalancer/95df2677c425efd7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bd568fe14e30e84f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07781509f0dc99ad5"
              },
              {
                "subnet_id": "subnet-081fb4bd0de4a5571"
              }
            ],
            "subnets": [
              "subnet-07781509f0dc99ad5",
              "subnet-081fb4bd0de4a5571"
            ],
            "tags": {
              "Name": "application loadbalancer"
            },
            "tags_all": {
              "Name": "application loadbalancer"
            },
            "vpc_id": "vpc-020da674c66c98ae7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_security_group.Private-SG",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_subnet.publicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:listener/app/application-loadbalancer/95df2677c425efd7/bd19b39a18f82901",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492286525:listener/app/application-loadbalancer/95df2677c425efd7/bd19b39a18f82901",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:loadbalancer/app/application-loadbalancer/95df2677c425efd7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.app-alb",
            "module.alb.aws_lb_target_group.app-tg",
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_security_group.Private-SG",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_subnet.publicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8",
            "arn_suffix": "targetgroup/app-tg/750bc56eab0760b8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:381492286525:loadbalancer/app/application-loadbalancer/95df2677c425efd7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-tg"
            },
            "tags_all": {
              "Name": "app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ps-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8-20240828080010150300000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8",
            "target_id": "i-0a0961742b7a9402d"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.app-tg",
            "module.instance.aws_instance.app-server-1",
            "module.rds.aws_db_instance.rds",
            "module.rds.aws_db_subnet_group.subnet_group",
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_security_group.Private-SG",
            "module.vpc.aws_subnet.privateSubnet1",
            "module.vpc.aws_subnet.privateSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ps-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8-20240828075949728700000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492286525:targetgroup/app-tg/750bc56eab0760b8",
            "target_id": "i-03d199c94e61edbff"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.app-tg",
            "module.instance.aws_instance.app-server-2",
            "module.rds.aws_db_instance.rds",
            "module.rds.aws_db_subnet_group.subnet_group",
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_security_group.Private-SG",
            "module.vpc.aws_subnet.privateSubnet1",
            "module.vpc.aws_subnet.privateSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion-Host1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:381492286525:instance/i-06f9fc96d76a3b6cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f9fc96d76a3b6cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa524e828ffff2ac",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-54-84-0-254.compute-1.amazonaws.com",
            "public_ip": "54.84.0.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d47e6622af128d4c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a2830b2a8097035d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07781509f0dc99ad5",
            "tags": {
              "Name": "BastionHost1"
            },
            "tags_all": {
              "Name": "BastionHost1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2830b2a8097035d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion-Host2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:381492286525:instance/i-0cdfbe3dc807664cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdfbe3dc807664cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0391fb819cba374e1",
            "private_dns": "ip-10-0-2-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.53",
            "public_dns": "ec2-18-215-170-230.compute-1.amazonaws.com",
            "public_ip": "18.215.170.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e2c8968ad91963d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a2830b2a8097035d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081fb4bd0de4a5571",
            "tags": {
              "Name": "BastionHost2"
            },
            "tags_all": {
              "Name": "BastionHost2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2830b2a8097035d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_subnet.publicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:381492286525:instance/i-0a0961742b7a9402d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0961742b7a9402d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c303837e25b4f12",
            "private_dns": "ip-10-0-3-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d1877182a18e3f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0bd568fe14e30e84f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c87c47f23325d01c",
            "tags": {
              "Name": "Application-Web1"
            },
            "tags_all": {
              "Name": "Application-Web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd568fe14e30e84f"
            ]
          },
          "dependencies": [
            "module.rds.aws_db_instance.rds",
            "module.rds.aws_db_subnet_group.subnet_group",
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_security_group.Private-SG",
            "module.vpc.aws_subnet.privateSubnet1",
            "module.vpc.aws_subnet.privateSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:381492286525:instance/i-03d199c94e61edbff",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d199c94e61edbff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d9994a61d510ec9",
            "private_dns": "ip-10-0-4-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-083bcb6e6e81e71fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0bd568fe14e30e84f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c50b17c394df8677",
            "tags": {
              "Name": "Application-Web2"
            },
            "tags_all": {
              "Name": "Application-Web2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd568fe14e30e84f"
            ]
          },
          "dependencies": [
            "module.rds.aws_db_instance.rds",
            "module.rds.aws_db_subnet_group.subnet_group",
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_security_group.Private-SG",
            "module.vpc.aws_subnet.privateSubnet1",
            "module.vpc.aws_subnet.privateSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03355b3614f9abc91",
            "arn": "arn:aws:ec2:us-east-1:381492286525:elastic-ip/eipalloc-03355b3614f9abc91",
            "association_id": "eipassoc-0e0d6694b38eeea28",
            "domain": "vpc",
            "id": "eipalloc-03355b3614f9abc91",
            "network_border_group": "us-east-1",
            "network_interface": "eni-004364b6ac6d97188",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-3-217-164-35.compute-1.amazonaws.com",
            "public_ip": "3.217.164.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "application-vpc-eip"
            },
            "tags_all": {
              "Name": "application-vpc-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:internet-gateway/igw-0dafdca2743cc78d3",
            "id": "igw-0dafdca2743cc78d3",
            "owner_id": "381492286525",
            "tags": {
              "Name": "application Internetgateway"
            },
            "tags_all": {
              "Name": "application Internetgateway"
            },
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03355b3614f9abc91",
            "association_id": "eipassoc-0e0d6694b38eeea28",
            "connectivity_type": "public",
            "id": "nat-0bf6a2556a4164b0f",
            "network_interface_id": "eni-004364b6ac6d97188",
            "private_ip": "10.0.1.149",
            "public_ip": "3.217.164.35",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07781509f0dc99ad5",
            "tags": {
              "Name": "application-vpc-nat"
            },
            "tags_all": {
              "Name": "application-vpc-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:route-table/rtb-0ca6a2a5d1ab211bc",
            "id": "rtb-0ca6a2a5d1ab211bc",
            "owner_id": "381492286525",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf6a2556a4164b0f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:route-table/rtb-034e24194192eab01",
            "id": "rtb-034e24194192eab01",
            "owner_id": "381492286525",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dafdca2743cc78d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-ac-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0853facd3f5c91345",
            "route_table_id": "rtb-034e24194192eab01",
            "subnet_id": "subnet-07781509f0dc99ad5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rtb",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-ac-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0726ac5416930b5",
            "route_table_id": "rtb-034e24194192eab01",
            "subnet_id": "subnet-081fb4bd0de4a5571"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rtb",
            "module.vpc.aws_subnet.publicSubnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-asc-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4fd16bb7578714b",
            "route_table_id": "rtb-0ca6a2a5d1ab211bc",
            "subnet_id": "subnet-0c87c47f23325d01c"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rtb",
            "module.vpc.aws_subnet.privateSubnet1",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-asc-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092551c8bad07808c",
            "route_table_id": "rtb-0ca6a2a5d1ab211bc",
            "subnet_id": "subnet-0c50b17c394df8677"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private-rtb",
            "module.vpc.aws_subnet.privateSubnet2",
            "module.vpc.aws_subnet.publicSubnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:security-group/sg-0d91cff67744cddcc",
            "description": "This Security for the applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the outbound to our instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d91cff67744cddcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the HTTP traffic to our instance",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Application ALB SG",
            "name_prefix": "",
            "owner_id": "381492286525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application ALB SG"
            },
            "tags_all": {
              "Name": "Application ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:security-group/sg-0a2830b2a8097035d",
            "description": "This Security for the applications bastion-host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the outbound to our instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2830b2a8097035d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the SSH to our instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Application Bastion SG",
            "name_prefix": "",
            "owner_id": "381492286525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application Bastion SG"
            },
            "tags_all": {
              "Name": "Application Bastion SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:security-group/sg-0bd568fe14e30e84f",
            "description": "This Security for the applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the outbound to our instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd568fe14e30e84f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the HTTP Traffic to our instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing the HTTP traffic to our instance",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allowing the SSH to our instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2830b2a8097035d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Application Private SG",
            "name_prefix": "",
            "owner_id": "381492286525",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application Private SG"
            },
            "tags_all": {
              "Name": "Application Private SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.Bastion-SG",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:subnet/subnet-0c87c47f23325d01c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c87c47f23325d01c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492286525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "application-private-subet-1a"
            },
            "tags_all": {
              "Name": "application-private-subet-1a"
            },
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:subnet/subnet-0c50b17c394df8677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c50b17c394df8677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492286525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "application-public-subet-2a"
            },
            "tags_all": {
              "Name": "application-public-subet-2a"
            },
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:subnet/subnet-07781509f0dc99ad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07781509f0dc99ad5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492286525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "application-public-subet-1a"
            },
            "tags_all": {
              "Name": "application-public-subet-1a"
            },
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:subnet/subnet-081fb4bd0de4a5571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081fb4bd0de4a5571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492286525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "application-public-subet-2a"
            },
            "tags_all": {
              "Name": "application-public-subet-2a"
            },
            "vpc_id": "vpc-020da674c66c98ae7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492286525:vpc/vpc-020da674c66c98ae7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0708572fb5d755e7e",
            "default_route_table_id": "rtb-024b4d783c0d30a99",
            "default_security_group_id": "sg-0cf5de241c71f770f",
            "dhcp_options_id": "dopt-0dc71f18191033d80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020da674c66c98ae7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024b4d783c0d30a99",
            "owner_id": "381492286525",
            "tags": {
              "Name": "application-vpc"
            },
            "tags_all": {
              "Name": "application-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}